# todomvc-006

./: .gitignore  Cargo.toml  Dockerfile  README.md
app/: Cargo.toml  Leptos.toml  build.rs
app/migrations/: 20240101000000_create_todos.sql
app/src/: app.rs  lib.rs  main.rs  model.rs  server.rs
app/src/components/: footer.rs  header.rs  mod.rs  todo_item.rs  todo_list.rs
