[package]
name = "todomvc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "todomvc"
path = "src/main.rs"
required-features = ["ssr"]

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "dep:sqlx",
    "dep:dotenvy",
]

[dependencies]
leptos = { version = "0.7", features = [] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
simple_logger = "5"

# SSR-only
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "compression-gzip"], optional = true }
leptos_axum = { version = "0.7", optional = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "migrate", "macros"], optional = true }
dotenvy = { version = "0.15", optional = true }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
